k8s/mongodb-service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongodb-service
#   namespace: chat-app
# spec:
#   selector:
#     app: mongodb
#   ports:
#     - protocol: TCP
#       port: 27017
#       targetPort: 27017
#   type: ClusterIP





apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: chat-app
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
